--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
 	"files.associations": {
 		"map": "c",
-		"format": "c"
+		"format": "c",
+		"cub3d.h": "c"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
